[gd_scene load_steps=24 format=2]

[ext_resource path="res://art assets/zombie.png" type="Texture" id=1]
[ext_resource path="res://zombie/Zombie.gd" type="Script" id=2]
[ext_resource path="res://Effects/BloodSprayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/slide3.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/slide.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/slide2.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/monster_windup.wav" type="AudioStream" id=7]
[ext_resource path="res://misc/PlayRandomSound.gd" type="Script" id=8]
[ext_resource path="res://sfx/monster_attack.wav" type="AudioStream" id=9]
[ext_resource path="res://sfx/monster_breathing.wav" type="AudioStream" id=10]
[ext_resource path="res://sfx/monster_hurt.wav" type="AudioStream" id=11]
[ext_resource path="res://sfx/monster_hurt2.wav" type="AudioStream" id=12]
[ext_resource path="res://sfx/monster_die.wav" type="AudioStream" id=13]
[ext_resource path="res://sfx/monster_alert.wav" type="AudioStream" id=14]

[sub_resource type="CircleShape2D" id=1]
radius = 42.5894

[sub_resource type="Animation" id=2]
resource_name = "pulse"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.99, 0.99 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "pulse"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.99, 0.99 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Leg/Sprite5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.53964, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Leg/Sprite4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.67734, 1.10243 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Leg2/Sprite4:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.677, 1.102 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Leg2/Sprite5:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.54, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ArmR:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 51.0214, -25.2049, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ArmL:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -13.5567, -53.7053, 16.3967, -13.5567 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -4.4834, 0 ), Vector2( 4.48341, -1.41581 ), Vector2( 0, 0 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("..")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.4, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "deal_damage_attack"
}, {
"args": [  ],
"method": "finish_attack"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("WindupSound:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AttackSound:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "death"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Leg/Sprite5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5.53964, 0 ), Vector2( 34.7998, -4.71937 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Leg/Sprite4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.67734, 1.10243 ), Vector2( 19.903, -1.49323 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Leg2/Sprite4:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.677, 1.102 ), Vector2( 19.9027, 0.394091 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Leg2/Sprite5:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5.54, 0 ), Vector2( 34.8001, 2.83162 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ArmR:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 77.2652 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ArmL:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -13.5567, -76.1848 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -15.5739, 1.65178 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Leg/Sprite5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.53964, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Leg/Sprite4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.67734, 1.10243 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Leg2/Sprite4:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.677, 1.102 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Leg2/Sprite5:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.54, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ArmR:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ArmL:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -13.5567 ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Leg/Sprite5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5.53964, 0 ), Vector2( 21.0524, 0 ), Vector2( 11.4455, 0 ), Vector2( -1.15368, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Leg/Sprite4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.67734, 1.10243 ), Vector2( 8.18949, 1.10243 ), Vector2( 8.18949, 1.10243 ), Vector2( 0.472477, 1.10243 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Leg2/Sprite4:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8.189, 1.102 ), Vector2( 8.189, 1.102 ), Vector2( 0.472, 1.102 ), Vector2( 2.677, 1.102 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Leg2/Sprite5:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 21.052, 0 ), Vector2( 11.446, 0 ), Vector2( -1.154, 0 ), Vector2( 5.54, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ArmR:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 7.40879 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ArmL:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -13.5567, -24.9371 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Body:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, -0.236 ), Vector2( 0, 0 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("StepSounds")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.4, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play"
}, {
"args": [  ],
"method": "play"
} ]
}

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( -16.1093, -36.3107, 2.11269, -36.3107, 16.3734, -27.5961, 32.4826, -12.8298, 36.1798, 11.6194, 25.6164, 39.2155, -2.90495, 41.1521, -23.2396, 30.9851, -26.9368, -3.389 )

[sub_resource type="CircleShape2D" id=9]
radius = 66.1309

[node name="Zombie" type="KinematicBody2D" groups=[
"enemies",
]]
z_index = 6
z_as_relative = false
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Graphics" type="Node2D" parent="."]
scale = Vector2( 1.72926, 1.72926 )

[node name="Leg" type="Node2D" parent="Graphics"]
modulate = Color( 0.282353, 0.282353, 0.282353, 1 )
position = Vector2( -0.437412, -7.39304 )

[node name="Sprite4" type="Sprite" parent="Graphics/Leg"]
position = Vector2( 2.67734, 1.10243 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 75, 97, 21, 18 )

[node name="Sprite5" type="Sprite" parent="Graphics/Leg"]
position = Vector2( 5.53964, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 99, 101, 21, 12 )

[node name="Leg2" type="Node2D" parent="Graphics"]
modulate = Color( 0.282353, 0.282353, 0.282353, 1 )
position = Vector2( 2.41936, 16.1078 )

[node name="Sprite4" type="Sprite" parent="Graphics/Leg2"]
position = Vector2( 2.677, 1.102 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 75, 97, 21, 18 )

[node name="Sprite5" type="Sprite" parent="Graphics/Leg2"]
position = Vector2( 5.54, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 99, 101, 21, 12 )

[node name="ArmR" type="Node2D" parent="Graphics"]
modulate = Color( 0.168627, 0.168627, 0.168627, 1 )
position = Vector2( 1.94454, 18.9151 )

[node name="Sprite7" type="Sprite" parent="Graphics/ArmR"]
position = Vector2( 6.03324, 5.75262 )
rotation = 0.926743
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 126, 65, 27, 28 )

[node name="Pivot" type="Node2D" parent="Graphics/ArmR"]
position = Vector2( 17.6788, 6.87508 )
rotation = -0.31822

[node name="Sprite6" type="Sprite" parent="Graphics/ArmR/Pivot"]
position = Vector2( 14.1634, -4.12264 )
rotation = 0.273505
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 80, 56, 32, 36 )

[node name="Accessory2" type="Sprite" parent="Graphics"]
self_modulate = Color( 0.109804, 0.109804, 0.109804, 1 )
position = Vector2( -0.532257, 16.5061 )
rotation = 2.08688
scale = Vector2( 0.995264, 0.995264 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 5, -1, 62, 55 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics/Accessory2"]
autoplay = "pulse"
anims/pulse = SubResource( 2 )

[node name="Accessory" type="Sprite" parent="Graphics"]
self_modulate = Color( 0.203922, 0.203922, 0.203922, 1 )
position = Vector2( -2.36974, -11.1226 )
rotation = 0.667313
scale = Vector2( 1.00069, 1.00069 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 5, 54, 62, 57 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics/Accessory"]
autoplay = "pulse"
anims/pulse = SubResource( 3 )

[node name="ArmL" type="Node2D" parent="Graphics"]
modulate = Color( 0.105882, 0.105882, 0.105882, 1 )
position = Vector2( -1.76777, -13.2583 )
rotation = -0.236609

[node name="Sprite6" type="Sprite" parent="Graphics/ArmL"]
position = Vector2( 9.01561, -12.3744 )
rotation = 0.191243
texture = ExtResource( 1 )
flip_v = true
region_enabled = true
region_rect = Rect2( 77, 12, 29, 38 )

[node name="Pivot" type="Node2D" parent="Graphics/ArmL"]
position = Vector2( 21.5727, -9.52755 )
rotation = -0.063339

[node name="Sprite7" type="Sprite" parent="Graphics/ArmL/Pivot"]
position = Vector2( 4.69281, 6.18967 )
rotation = -0.27538
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 124, 13, 25, 35 )

[node name="Body" type="Sprite" parent="Graphics"]
self_modulate = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
rotation = 0.265498
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 8, 113, 54, 59 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics"]
anims/attack = SubResource( 4 )
anims/death = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="StepSounds" type="Node2D" parent="Graphics"]
scale = Vector2( 0.578282, 0.578282 )
script = ExtResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Graphics/StepSounds"]
stream = ExtResource( 5 )
volume_db = -20.0
bus = "Sfx"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Graphics/StepSounds"]
stream = ExtResource( 6 )
volume_db = -20.0
bus = "Sfx"

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="Graphics/StepSounds"]
stream = ExtResource( 4 )
volume_db = -20.0
bus = "Sfx"

[node name="WindupSound" type="AudioStreamPlayer2D" parent="Graphics"]
stream = ExtResource( 7 )
volume_db = -5.0
bus = "Sfx"

[node name="AttackSound" type="AudioStreamPlayer2D" parent="Graphics"]
stream = ExtResource( 9 )
volume_db = -5.0
bus = "Sfx"

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
scale = Vector2( 0.94666, 1.03275 )
occluder = SubResource( 8 )

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2( 23.1247, -1.26134 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 64.0723, 7.34161 )
shape = SubResource( 9 )

[node name="BloodSprayer" parent="." instance=ExtResource( 3 )]

[node name="IdleSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
autoplay = true
bus = "Sfx"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = -4.0
bus = "Sfx"

[node name="AlertSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = -4.0
bus = "Sfx"

[node name="HurtSounds" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="HurtSounds"]
stream = ExtResource( 11 )
volume_db = -8.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="HurtSounds"]
stream = ExtResource( 12 )
volume_db = -8.0

[node name="StunTimer" type="Timer" parent="."]
one_shot = true
